--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "add": "^2.0.6",
     "final-form": "^4.20.1",
     "react": "^16.13.1",
     "react-app-rewire-alias": "^0.1.6",
@@ -13,7 +16,8 @@
     "react-dom": "^16.13.1",
     "react-final-form": "^6.5.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "yarn": "^1.22.5"
   },
   "scripts": {
     "start": "PORT=4200 react-app-rewired start",
