--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^7.1.2",
     "add": "^2.0.6",
     "final-form": "^4.20.1",
+    "mui-rff": "^2.5.6",
     "react": "^16.13.1",
     "react-app-rewire-alias": "^0.1.6",
     "react-app-rewired": "^2.1.6",
@@ -17,7 +18,7 @@
     "react-final-form": "^6.5.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "yarn": "^1.22.5"
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "start": "PORT=4200 react-app-rewired start",
