--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,10 @@
 {
-  "singleQuote": true,
-  "trailingComma": "all",
-  "printWidth": 120,
-  "semi": true,
+  "arrowParens": "avoid",
   "jsxBracketSameLine": false,
-  "arrowParens": "avoid"
+  "printWidth": 120,
+  "singleQuote": true,
+  "semi": true,
+  "trailingComma": "all",
+  "tabWidth": 2,
+  "useTabs": true
 }
