--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "compilerOptions": {
     "baseUrl": "src",
+    "paths": {
+      "common": ["src/common/*"],
+      "api": ["src/api/*"]
+    },
     "target": "es5",
     "lib": [
       "dom",
