--- a/package.json
+++ b/package.json
@@ -28,15 +28,19 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx src --color",
-    "format": "prettier --config .prettierrc --write ./src"
+    "format": "prettier --config .prettierrc --write ./src",
+    "postinstall": "husky install"
   },
+
   "eslintConfig": {
     "extends": "react-app"
   },
+  "pre-commit":"lint-staged",
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "git add .",
-      "yarn format"
+      "yarn lint",
+      "format",
+      "git add"
     ]
   },
   "husky": {
@@ -73,6 +77,7 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^6.0.0",
+    "pre-commit": "^1.2.2",
     "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
     "prettier-eslint-cli": "^5.0.1",
