--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@testing-library/user-event": "^7.1.2",
     "add": "^2.0.6",
     "final-form": "^4.20.1",
-    "lint-staged": "^10.5.4",
     "mui-rff": "^2.5.6",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -28,25 +27,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx src --color",
-    "format": "prettier --config .prettierrc --write ./src",
-    "postinstall": "husky install"
+    "format": "prettier --config .prettierrc --write ./src"
   },
-
   "eslintConfig": {
     "extends": "react-app"
-  },
-  "pre-commit":"lint-staged",
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "yarn lint",
-      "format",
-      "git add"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "browserslist": {
     "production": [
@@ -76,8 +60,6 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^6.0.0",
-    "pre-commit": "^1.2.2",
     "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
     "prettier-eslint-cli": "^5.0.1",
