--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "add": "^2.0.6",
     "final-form": "^4.20.1",
     "mui-rff": "^2.5.6",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-app-rewire-alias": "^0.1.6",
     "react-app-rewired": "^2.1.6",
@@ -24,7 +25,9 @@
     "start": "PORT=4200 react-app-rewired start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx src --color",
+    "format": "prettier --config .prettierrc --write ./src"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,6 +45,24 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "babel-eslint": "^10.1.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-flowtype": "^5.7.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.2.1",
+    "prettier-eslint": "^12.0.0",
+    "prettier-eslint-cli": "^5.0.1",
     "typescript": "^4.2.4"
   }
 }
