--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "esnext"
     ],
     "allowJs": true,
+    "alwaysStrict": false,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
