Issue#25 settings page (#47)
* intro

* storybook. badge

* st - badge

* st - tooltip

* refactring

* point

* point

* ValidationSchema

* point

* footer form

* point

* clean code

* Work it

* prepare payload

* reload data

* Clean code

* Error messages

* disable submit form when form is invalid

* links

* Add bread crumbs

* play depend of settings

* Fix trouble

* it work

* refactoring

Closes #25

--- a/package.json
+++ b/package.json
@@ -5,10 +5,18 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-essentials": "^6.2.9",
+    "@storybook/addon-links": "^6.2.9",
+    "@storybook/node-logger": "^6.2.9",
+    "@storybook/preset-create-react-app": "^3.1.7",
+    "@storybook/react": "^6.2.9",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/yup": "^0.29.11",
     "add": "^2.0.6",
+    "babel-loader": "8.1.0",
     "final-form": "^4.20.1",
     "mui-rff": "^2.5.6",
     "prop-types": "^15.7.2",
@@ -19,7 +27,8 @@
     "react-final-form": "^6.5.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "yarn": "^1.22.10"
+    "yarn": "^1.22.10",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "PORT=4200 react-app-rewired start",
@@ -27,10 +36,22 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx src --color",
-    "format": "prettier --config .prettierrc --write ./src"
+    "format": "prettier --config .prettierrc --write ./src",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
+    ]
   },
   "browserslist": {
     "production": [
