--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-loader": "8.1.0",
     "final-form": "^4.20.1",
     "joi": "^17.4.2",
+    "lodash": "^4.17.21",
     "mui-rff": "^2.5.6",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
