--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@react-hook/previous": "^1.0.1",
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
@@ -18,6 +19,8 @@
     "add": "^2.0.6",
     "babel-loader": "8.1.0",
     "final-form": "^4.20.1",
+    "joi": "^17.4.2",
+    "lodash": "^4.17.21",
     "mui-rff": "^2.5.6",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
