--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@emotion/react": "^11.6.0",
     "@fontsource/roboto": "^4.5.1",
     "@material-ui/core": "^4.11.0",
+    "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/icons": "^4.9.1",
     "@mui/material": "^5.1.1",
     "@mui/styled-engine-sc": "^5.1.0",
+    "@mui/x-data-grid": "^5.0.1",
     "@react-hook/previous": "^1.0.1",
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
@@ -19,9 +21,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/faker": "^5.5.9",
     "@types/yup": "^0.29.11",
     "add": "^2.0.6",
     "babel-loader": "8.1.0",
+    "faker": "^5.5.3",
     "final-form": "^4.20.1",
     "joi": "^17.4.2",
     "lodash": "^4.17.21",
