--- a/.eslintrc
+++ b/.eslintrc
@@ -1,78 +1,85 @@
 {
-	"plugins": ["prettier", "@typescript-eslint"],
-	"extends": ["airbnb-typescript", "react-app", "prettier"],
-	"parser": "@typescript-eslint/parser",
-	"parserOptions": {
-		"project": "./tsconfig.json"
-	},
-	"settings": {
-		"import/resolver": {
-			"typescript": {
-				"alwaysTryTypes": true
-			}
-		}
-	},
-	"rules": {
-		"object-curly-spacing": ["warn", "always"],
-		"no-unused-vars": [
-			"warn",
-			{
-				"vars": "all",
-				"args": "none"
-			}
-		],
-		"@typescript-eslint/no-unused-vars": [
-			"warn",
-			{
-				"vars": "all",
-				"args": "none"
-			}
-		],
-		"@typescript-eslint/no-explicit-any": "off",
-		"max-len": [
-			"warn",
-			{
-				"code": 80,
-				"ignoreStrings": true,
-				"ignoreTemplateLiterals": true,
-				"ignoreComments": true
-			}
-		],
-		"no-plusplus": [
-			"error",
-			{
-				"allowForLoopAfterthoughts": true
-			}
-		],
-		"react/jsx-key": "error",
-		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-		"import/no-anonymous-default-export": "off",
-		"no-use-before-define": "off",
-		"import/no-cycle": [
-			"error",
-			{
-				"maxDepth": 100
-			}
-		],
-		"@typescript-eslint/no-shadow": 1,
-		"react/jsx-props-no-spreading": "off",
-		"import/prefer-default-export": "off",
-		"react/jsx-boolean-value": "off",
-		"react/prop-types": "off",
-		"react/no-unescaped-entities": "off",
-		"react/jsx-one-expression-per-line": "off",
-		"react/jsx-wrap-multilines": "off",
-		"react/destructuring-assignment": "off",
-		"@typescript-eslint/comma-dangle": [
-			"error",
-			{
-				"arrays": "only-multiline",
-				"objects": "only-multiline",
-				"imports": "only-multiline",
-				"exports": "only-multiline",
-				"functions": "never"
-			}
-		],
-		"import/no-extraneous-dependencies": ["error", {"devDependencies": false, "optionalDependencies": false, "peerDependencies": false}]
-	}
+  "plugins": ["prettier", "@typescript-eslint"],
+  "extends": ["airbnb-typescript", "react-app", "prettier"],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  },
+  "settings": {
+    "import/resolver": {
+      "typescript": {
+        "alwaysTryTypes": true
+      }
+    }
+  },
+  "rules": {
+    "object-curly-spacing": ["warn", "always"],
+    "no-unused-vars": [
+      "warn",
+      {
+        "vars": "all",
+        "args": "none"
+      }
+    ],
+    "@typescript-eslint/no-unused-vars": [
+      "warn",
+      {
+        "vars": "all",
+        "args": "none"
+      }
+    ],
+    "@typescript-eslint/no-explicit-any": "off",
+    "max-len": [
+      "warn",
+      {
+        "code": 80,
+        "ignoreStrings": true,
+        "ignoreTemplateLiterals": true,
+        "ignoreComments": true
+      }
+    ],
+    "no-plusplus": [
+      "error",
+      {
+        "allowForLoopAfterthoughts": true
+      }
+    ],
+    "react/jsx-key": "error",
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "import/no-anonymous-default-export": "off",
+    "no-use-before-define": "off",
+    "import/no-cycle": [
+      "error",
+      {
+        "maxDepth": 100
+      }
+    ],
+    "@typescript-eslint/no-shadow": 1,
+    "react/jsx-props-no-spreading": "off",
+    "import/prefer-default-export": "off",
+    "react/jsx-boolean-value": "off",
+    "react/prop-types": "off",
+    "react/no-unescaped-entities": "off",
+    "react/jsx-one-expression-per-line": "off",
+    "react/jsx-wrap-multilines": "off",
+    "react/destructuring-assignment": "off",
+    "@typescript-eslint/comma-dangle": [
+      "error",
+      {
+        "arrays": "only-multiline",
+        "objects": "only-multiline",
+        "imports": "only-multiline",
+        "exports": "only-multiline",
+        "functions": "never"
+      }
+    ],
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": false,
+        "optionalDependencies": false,
+        "peerDependencies": false
+      }
+    ]
+  }
 }
