--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,8 @@
 {
-	"arrowParens": "avoid",
-	"jsxBracketSameLine": false,
-	"printWidth": 80,
-	"singleQuote": true,
-	"semi": true,
-	"trailingComma": "all",
-	"tabWidth": 2,
-	"useTabs": true
+  "arrowParens": "avoid",
+  "jsxBracketSameLine": false,
+  "printWidth": 80,
+  "singleQuote": true,
+  "semi": true,
+  "trailingComma": "all"
 }
