--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "dependencies": {
     "@emotion/react": "^11.6.0",
     "@fontsource/roboto": "^4.5.1",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/data-grid": "^4.0.0-alpha.37",
-    "@material-ui/icons": "^4.9.1",
-    "@mui/material": "^5.1.1",
+    "@material-ui/core": "latest",
+    "@material-ui/icons": "latest",
+    "@mui/material": "latest",
     "@mui/styled-engine-sc": "^5.1.0",
-    "@mui/x-data-grid": "^5.0.1",
+    "@mui/styles": "latest",
+    "@mui/x-data-grid": "^5.2.1",
     "@react-hook/previous": "^1.0.1",
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
@@ -30,8 +30,9 @@
     "joi": "^17.4.2",
     "lodash": "^4.17.21",
     "mui-rff": "^2.5.6",
+    "node-sass": "4.14.1",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
+    "react": "^17.0.0",
     "react-app-rewire-alias": "^0.1.6",
     "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
@@ -78,6 +79,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.3.2",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "babel-eslint": "^10.1.0",
