--- a/.eslintrc
+++ b/.eslintrc
@@ -51,13 +51,26 @@
       }
     ],
     "react/jsx-key": "error",
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".tsx"] }],
+    "react/jsx-filename-extension": [
+      1,
+      { "extensions": [".js", ".jsx", ".tsx"] }
+    ],
     "import/no-anonymous-default-export": "off",
     "no-use-before-define": "off",
     "import/no-cycle": [
       "error",
       {
         "maxDepth": 100
+      }
+    ],
+    "padding-line-between-statements": [
+      "error",
+      { "blankLine": "always", "prev": "*", "next": "return" },
+      { "blankLine": "always", "prev": ["const", "let", "var"], "next": "*" },
+      {
+        "blankLine": "any",
+        "prev": ["const", "let", "var"],
+        "next": ["const", "let", "var"]
       }
     ],
     "react-hooks/exhaustive-deps": "error",
