Issue#84  api to ts (#85) Closes #84
* intro

* Folder api

* Folder api - refactoring and eslint

* Settings

* Word api - work

* formatting

* Filter generic

* Fix try catch

* Refactoring Types

--- a/.eslintrc
+++ b/.eslintrc
@@ -51,13 +51,34 @@
       }
     ],
     "react/jsx-key": "error",
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".tsx"] }],
+    "react/jsx-filename-extension": [
+      1,
+      { "extensions": [".js", ".jsx", ".tsx"] }
+    ],
     "import/no-anonymous-default-export": "off",
     "no-use-before-define": "off",
     "import/no-cycle": [
       "error",
       {
         "maxDepth": 100
+      }
+    ],
+    "padding-line-between-statements": [
+      "error",
+      { "blankLine": "always", "prev": "*", "next": ["return", "export"] },
+      { "blankLine": "always", "prev": ["const", "let", "var"], "next": "*" },
+      {
+        "blankLine": "any",
+        "prev": ["const", "let", "var"],
+        "next": ["const", "let", "var"]
+      }
+    ],
+    "@typescript-eslint/padding-line-between-statements": [
+      "error",
+      {
+        "blankLine": "always",
+        "prev": "*",
+        "next": ["interface", "type"]
       }
     ],
     "react-hooks/exhaustive-deps": "error",
