--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "joi": "^17.4.2",
     "lodash": "^4.17.21",
     "mui-rff": "^2.5.6",
-    "node-sass": "4.14.1",
+    "node-sass": "^7.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.0",
     "react-app-rewire-alias": "^0.1.6",
