--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "lex",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://denq.github.io/lex",
   "dependencies": {
     "@emotion/react": "^11.6.0",
     "@fontsource/roboto": "^4.5.1",
@@ -27,10 +28,10 @@
     "babel-loader": "8.1.0",
     "faker": "^5.5.3",
     "final-form": "^4.20.1",
+    "gh-pages": "^3.2.3",
     "joi": "^17.4.2",
     "lodash": "^4.17.21",
     "mui-rff": "^2.5.6",
-    "node-sass": "^7.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.0",
     "react-app-rewire-alias": "^0.1.6",
@@ -39,6 +40,7 @@
     "react-final-form": "^6.5.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "sass": "^1.49.11",
     "styled-components": "^5.3.3",
     "yarn": "^1.22.10",
     "yup": "^0.32.9"
@@ -46,6 +48,8 @@
   "scripts": {
     "start": "PORT=4200 react-app-rewired start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx src --color",
