--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "build": "react-scripts build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "test": "react-scripts test",
+    "test": "CI=true react-scripts test --no-watch",
+    "test-watch": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx src --color",
     "format": "prettier --config .prettierrc --write ./src",
